# Cytos

./: .gitignore  CMakeLists.txt  CMakeListsCpp.txt  README.md  addon.sh  debug.js
source-cpp/addon/: cell.hpp  colors.hpp  graphics.cpp  player.cc  player.hpp  server.cc  server.hpp  state.cc
source-cpp/extensions/: ext.hpp
source-cpp/extensions/rockslide/: rock-engine-impl.hpp  rock-engine.hpp  rock.hpp
source-cpp/game/: bot.cpp  bot.hpp  control.cpp  control.hpp  dual.hpp  handle.cpp  handle.hpp  perms.hpp
source-cpp/misc/: freader.hpp  fwriter.hpp  logger.hpp  misc.hpp  pool.cpp  pool.hpp  reader.hpp  writer.hpp
source-cpp/modes/: ffa.hpp  instant.hpp  mega.hpp  omega.hpp  options.hpp  sf.hpp  ultra.hpp
source-cpp/modes/benchmark/: omega.hpp  virus.hpp
source-cpp/physics/: cell.hpp  engine-impl.hpp  engine.hpp  grid.hpp  quadtree.hpp
source-js/: .prettierrc  build.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
source-js/main/: app.js  index.js  jsconfig.json
source-js/render/: index.tsx  types.ts  worker.ts
source-js/render/client/: index.ts  state.ts
source-js/render/client/cell/: colors.ts  player.ts  textures.ts
source-js/render/client/settings/: hotkey-handler.ts  keybinds.ts  mouse.ts  setting.ts  settings.ts  themes.ts
source-js/render/client/shaders/: disco_frag.glsl  fullscreen_vert.glsl  map_frag.glsl  orb_frag.glsl  quad_vert.glsl  simple_vert.glsl  (+5 more)
source-js/render/react/: app.d.ts  app.tsx  utils.tsx
source-js/render/stores/: hud.tsx  inputs.ts  servers.ts
source-js/render/template/: index.html
(+45 files in other folders)
